--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,13 +8,15 @@ provisioner:
   # For example:
   #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
+  nodes_path: test/fixtures/nodes
+  clients_path: test/fixtures/clients
+  data_bags_path: test/fixtures/data_bags
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
-  - name: centos-7.3
+  - name: ubuntu-14.04
 
 suites:
   - name: default
